// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with collapsed prop 1`] = `
.c0 {
  max-width: 500px;
  min-width: 380px;
  visibility: visible;
  border-right: 1px solid #D1D1D1;
  -webkit-transition: 0.1s ease-in-out -webkit-transform;
  -webkit-transition: 0.1s ease-in-out transform;
  transition: 0.1s ease-in-out transform;
  background-color: white;
  overflow: hidden;
  -webkit-transform: translate3d(-100%,0,0);
  -ms-transform: translate3d(-100%,0,0);
  transform: translate3d(-100%,0,0);
  width: 0;
  max-width: 0;
  min-width: 0;
  overflow-x: hidden;
}

@media (max-width:1024px) {
  .c0 {
    position: absolute;
    z-index: 1;
    height: 100%;
  }
}

<div
  className="c0"
/>
`;

exports[`renders correctly with no props 1`] = `
.c0 {
  max-width: 500px;
  min-width: 380px;
  visibility: visible;
  border-right: 1px solid #D1D1D1;
  -webkit-transition: 0.1s ease-in-out -webkit-transform;
  -webkit-transition: 0.1s ease-in-out transform;
  transition: 0.1s ease-in-out transform;
  background-color: white;
}

@media (max-width:1024px) {
  .c0 {
    position: absolute;
    z-index: 1;
    height: 100%;
  }
}

<div
  className="c0"
/>
`;
